[package]
name = "hill_cypher"
authors = ["MrFixThis <mrfixthis55@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rulinalg = "0.4.2"
modinverse = "0.1.1"
thiserror = "1.0.38"
colored = "2.0.0"
derive_builder = "0.12.0"
fancy-regex = "0.11.0"

[dependencies.structopt]
version = "0.3.26"
default-features = false
features = ["color"]

# Target for building a binary image for windows
[target.x86_64-pc-windows-gnu]
linker = "mingw-w64-gcc"
